feat:Add tests for Home Activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="intro_title_04">Intro Title 4</string>
     <string name="intro_title_03">Intro title 3</string>
     <string name="intro_title_02">Intro title 2</string>
+    <string name="shorten_url">Shorten Url</string>
 </resources>
