--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="intro_title_03">Intro title 3</string>
     <string name="intro_title_02">Intro title 2</string>
     <string name="shorten_url">Shorten Url</string>
+    <string name="invalid_url">Invalid Url</string>
 </resources>
