--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="intro_title_02">Intro title 2</string>
     <string name="shorten_url">Shorten Url</string>
     <string name="invalid_url">Invalid Url</string>
+    <string name="please_wait">Please wait...</string>
 </resources>
